Переместил данные из web в dal

--- a/src/PS.Phonebook/PS.Automarket.Service/PS.Automarket.Service.csproj
+++ b/src/PS.Phonebook/PS.Automarket.Service/PS.Automarket.Service.csproj
@@ -9,4 +9,8 @@
     <Folder Include="Implementations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PS.Phonebook.DAL\PS.Phonebook.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
