--- a/src/PS.Phonebook/PS.Phonebook.Web/PS.Phonebook.Web.csproj
+++ b/src/PS.Phonebook/PS.Phonebook.Web/PS.Phonebook.Web.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.17" />
+		<PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
 	</ItemGroup>
 
   <ItemGroup>
