Создали Db, сделал миграцию

--- a/src/PS.Phonebook/PS.Phonebook.Web/appsettings.json
+++ b/src/PS.Phonebook/PS.Phonebook.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-PS.Phonebook.Web-E424A5A7-ADC6-46E0-9143-05129F94E214;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(local);Database=PhonebookDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
