--- a/src/PS.Phonebook/PS.Automarket.Domain/PS.Phonebook.Domain.csproj
+++ b/src/PS.Phonebook/PS.Automarket.Domain/PS.Phonebook.Domain.csproj
@@ -2,11 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+	  <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
-    <Folder Include="Enums\" />
     <Folder Include="Response\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
