--- a/src/PS.Phonebook/PS.Phonebook.DAL/PS.Phonebook.DAL.csproj
+++ b/src/PS.Phonebook/PS.Phonebook.DAL/PS.Phonebook.DAL.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PS.Automarket.Domain\PS.Automarket.Domain.csproj" />
+    <ProjectReference Include="..\PS.Automarket.Domain\PS.Phonebook.Domain.csproj" />
   </ItemGroup>
 
 </Project>
