Исправлен Путь на Domain

--- a/src/PS.Phonebook/PS.Phonebook.Web/PS.Phonebook.Web.csproj
+++ b/src/PS.Phonebook/PS.Phonebook.Web/PS.Phonebook.Web.csproj
@@ -12,7 +12,7 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PS.Automarket.Service\PS.Automarket.Service.csproj" />
+    <ProjectReference Include="..\PS.Automarket.Service\PS.Phonebook.Service.csproj" />
   </ItemGroup>
 
 </Project>
