--- a/src/PS.Phonebook/PS.Phonebook.Web/PS.Phonebook.Web.csproj
+++ b/src/PS.Phonebook/PS.Phonebook.Web/PS.Phonebook.Web.csproj
@@ -11,8 +11,8 @@
 		<PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
 	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\PS.Automarket.Service\PS.Phonebook.Service.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\PS.Phonebook.Service\PS.Phonebook.Service.csproj" />
+	</ItemGroup>
 
 </Project>
