Добавил вcе формы в представление Create

--- a/src/PS.Phonebook/PS.Phonebook.Domain/PS.Phonebook.Domain.csproj
+++ b/src/PS.Phonebook/PS.Phonebook.Domain/PS.Phonebook.Domain.csproj
@@ -5,4 +5,8 @@
 	  <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Entities\Organization.cs~RFefc02ad.TMP" />
+  </ItemGroup>
+
 </Project>
