Добавлена бд PosgreSQL

--- a/src/PS.Phonebook/PS.Phonebook.Web/appsettings.json
+++ b/src/PS.Phonebook/PS.Phonebook.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=PhonebookDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(local);Database=PhonebookDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "NpgsqlConntextion": "Host=localhost; Port=5433; Database=PhonebookDbNpgsqlDb; User id=postgres; Password=qwert12345"
   },
   "Logging": {
     "LogLevel": {
